--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <title>Matching Game</title>
     <meta name="description" content="">
-    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/app.js">
+
+    </script>
 </head>
 <body>
 
@@ -30,8 +35,8 @@
         </section>
 
         <ul class="deck">
-            <li class="card">
-                <i class="fa fa-diamond"></i>
+            <li class="card open show">
+                <i class="fa fa-paper-plane"></i>
             </li>
             <li class="card">
                 <i class="fa fa-paper-plane-o"></i>
@@ -81,6 +86,6 @@
         </ul>
     </div>
 
-    <script src="js/app.js"></script>
+
 </body>
 </html>
