DONE: Add timer which count time elapsed.
TOD - Stop timer when game stops

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
+
+        <section class="timer">
+          <span class="elpasedTime">
+            <span class="time minutesTen">0</span><span class="time minutesUnits">0</span>
+            <span class="time">:</span>
+            <span class="time secondsTen">0</span><span class="time secondsUnits">0</span> </span>
+        </section>
+
     </div>
 
 
