--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<li class="star1"><i class="fa fa-star"></i></li>
+        		<li class="star2 hidden"><i class="fa fa-star" ></i></li>
+        		<li class="star3"><i class="fa fa-star"></i></li>
         	</ul>
 
         	<span class="moves"></span> Moves
