--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="score-panel">
         	<ul class="stars">
         		<li class="star1"><i class="fa fa-star"></i></li>
-        		<li class="star2 hidden"><i class="fa fa-star" ></i></li>
+        		<li class="star2"><i class="fa fa-star" ></i></li>
         		<li class="star3"><i class="fa fa-star"></i></li>
         	</ul>
 
