BUG FIXED: 	-THE BUG WAS: after a player lose a game, at restarting the game 	the game logic was lost, allowing user to open cads and do not 	perfom any coded check on them.

--- a/index.html
+++ b/index.html
@@ -106,18 +106,24 @@
         </section>
         <section class="score-panel">
             <ul class="stars">
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
+              <li class="star1"><i class="fa fa-star"></i></li>
+          		<li class="star2"><i class="fa fa-star" ></i></li>
+          		<li class="star3"><i class="fa fa-star"></i></li>
             </ul>
 
             <span class="moves"></span> Moves
-            <br>
-
-              <div class="restart">
+            <div class="restart">
                 <span>one more time?   </span>
               <i class="fa fa-repeat"></i>
             </div>
+            <br>
+
+        </section>
+        <section class="timer-win-lose">
+          <span class="elpasedTime">
+            <span class="time minutesTen"></span><span class="time minutesUnits"></span>
+            <span class="time">:</span>
+            <span class="time secondsTen"></span><span class="time secondsUnits"></span> </span>
         </section>
       </div>
     </div>
