--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/app.js">
-
-    </script>
 </head>
 <body>
 
@@ -128,5 +123,13 @@
       </div>
     </div>
     <!-- END WIN OR LOSE ALERT -->
+
+    <!-- SCRIPTS -->
+      <!-- jQuery -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <!-- MAIN JS -->
+      <script type="text/javascript" src="js/app.js"></script>
+    <!-- END SCRIPTS -->
+
 </body>
 </html>
