--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <header>
             <h1>Matching Game</h1>
+            <button class="" type="button" name="startGame">Star Game</button>
         </header>
 
         <section class="score-panel">
