--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div class="container">
         <header>
             <h1>Matching Game</h1>
-            <button class="" type="button" name="startGame">Star Game</button>
         </header>
 
         <section class="score-panel">
@@ -97,8 +96,8 @@
       <div  class="resul-deck">
 
         <section class="message-win-lose">
-          <h1 class="noVisible youWin">Fantastic! you win.</h1>
-          <h1 class="noVisible youLose">Ohhh! try again.</h1>
+          <!-- <h1 class="noVisible youWin">Fantastic! you win.</h1>
+          <h1 class="noVisible youLose">Ohhh! try again.</h1> -->
         </section>
         <section class="score-panel">
             <ul class="stars">
