ADDED: Welcome pane with Play button

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <!-- WIN OR LOSE ALERT -->
     <div id="result-pane" class="container noVisible">
-      <div  class="resul-deck">
+      <div  class="result-deck">
 
         <section class="message-win-lose">
           <!-- <h1 class="noVisible youWin">Fantastic! you win.</h1>
@@ -108,7 +108,7 @@
 
             <span class="moves"></span> Moves
             <div class="restart">
-                <span>one more time?   </span>
+                <span>one more time?</span>
               <i class="fa fa-repeat"></i>
             </div>
             <br>
@@ -123,6 +123,42 @@
       </div>
     </div>
     <!-- END WIN OR LOSE ALERT -->
+
+    <!-- WELCOME PANE -->
+    <div id="welcome-pane" class="container">
+      <div  class="welcome-deck">
+
+        <section class="message-welcome-pane">
+          <h1>Matching Game <br><small>by 'jesuarva'</small></h1>
+          <h3 class="play-button">
+            Play
+          </h3>
+        </section>
+        <section class="score-panel">
+            <ul class="stars">
+              <li class="star1"><i class="fa fa-star"></i></li>
+          		<li class="star2"><i class="fa fa-star" ></i></li>
+          		<li class="star3"><i class="fa fa-star"></i></li>
+            </ul>
+
+            <span class="moves"></span> Moves
+            <div class="restart">
+                <span>try again?   :  </span>
+              <i class="fa fa-repeat"></i>
+            </div>
+            <br>
+
+        </section>
+        <section class="timer-win-lose">
+          <span class="elpasedTime">
+            <span class="time minutesTen"></span><span class="time minutesUnits"></span>
+            <span class="time">:</span>
+            <span class="time secondsTen"></span><span class="time secondsUnits"></span> </span>
+        </section>
+      </div>
+    </div>
+    <!-- END WELCOME PANE -->
+
 
     <!-- SCRIPTS -->
       <!-- jQuery -->
