CLEANING THE CODE: getting rid of unnecessary comments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-
+  <div class="gema-body">
     <div class="container">
         <header>
             <h1>Matching Game</h1>
@@ -135,7 +135,7 @@
           </h3>
         </section>
         <section class="score-panel">
-            <ul class="stars">
+            <!-- <ul class="stars">
               <li class="star1"><i class="fa fa-star"></i></li>
           		<li class="star2"><i class="fa fa-star" ></i></li>
           		<li class="star3"><i class="fa fa-star"></i></li>
@@ -146,18 +146,19 @@
                 <span>try again?   :  </span>
               <i class="fa fa-repeat"></i>
             </div>
-            <br>
-
+            <br> -->
         </section>
         <section class="timer-win-lose">
-          <span class="elpasedTime">
+          <!-- <span class="elpasedTime">
             <span class="time minutesTen"></span><span class="time minutesUnits"></span>
             <span class="time">:</span>
-            <span class="time secondsTen"></span><span class="time secondsUnits"></span> </span>
+            <span class="time secondsTen"></span><span class="time secondsUnits"></span></span> -->
         </section>
       </div>
     </div>
     <!-- END WELCOME PANE -->
+
+  </div>
 
 
     <!-- SCRIPTS -->
